--- a/auth/Properties/Resources.resx
+++ b/auth/Properties/Resources.resx
@@ -118,6 +118,9 @@
     <value>System.Resources.ResXResourceWriter, System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </resheader>
   <assembly alias="System.Windows.Forms" name="System.Windows.Forms, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
+  <data name="Belfiore" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Belfiore.ico;System.Drawing.Icon, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="BelfiOre_Windows_10_Wallpaper" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\BelfiOre Windows 10 Wallpaper.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
@@ -133,10 +136,16 @@
   <data name="PanOSMain" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\PanOSMain.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
+  <data name="PanOSMainLaunchHelper" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\PanOSMainLaunchHelper.vbs;System.String, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089;Windows-1252</value>
+  </data>
   <data name="phase3" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\phase3.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="UpdateScreen" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\UpdateScreen.exe;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+  </data>
+  <data name="Windows_8_Error_Dubstep_Remix" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Windows 8 Error Dubstep Remix.wav;System.IO.MemoryStream, mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
 </root>
